# taskq_queue_server

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  docker-compose.override.yml  docker-compose.yml  example.gitlab-ci.yml  helmfile.yaml  requirements.txt
.github/workflows/: tests.yml
app/: .coveragerc  .pre-commit-config.yaml  conftest.py  logging_config.py  pyproject.toml  pytest.ini  run_server.py  server_speed_test.py  tests.py
app/client/: client.py  test_client.py  tests.py
app/server/: opcode_utils.py  opcodes.py  server.py  serverconfig.py  session.py
app/server/handlers/: __init__.py  auth_handler.py  base_handler.py  exceptions.py  protocol.py  queue_handler.py  task_handler.py
app/server/tests/: __init__.py  base.py  queue.py  server.py  test_queue.py  test_server.py
app/settings/: logs.py  sentryconfig.py  settings.py  utils.py
app/task_queue/: manager.py  node.py  persistence.py  queue.py
app/task_queue/tests/: __init__.py  perfomance_tests.py  test_performance.py  test_persistence.py  test_task_queue.py  tests.py
app/utils/: events.py
helm/environments/: .sops.yaml  common_values.yaml
helm/environments/production/: secrets.yaml  values.yaml
helm/values/: altyn-moneta-processing.yaml.gotmpl
